fix for preview image on mobile?

--- a/src/scss/components/Chat.scss
+++ b/src/scss/components/Chat.scss
@@ -734,9 +734,6 @@ div > blockquote {
   #chatbox {
     padding-bottom: 5rem !important;
   }
-  .chatboxform {
-    top: -10rem;
-  }
   .chat-image-uploaded {
     max-width: 150px;
     max-height: 150px;
